css fixed using span
title divs were not aligning well. I used a span to align horizontally.

--- a/cards/src/Components/Card/card.css
+++ b/cards/src/Components/Card/card.css
@@ -1,23 +1,68 @@
 .card {
+    font-family: inter;
     font-size: 12px;
     width: 470px;
     height: 168px;     
     display: flex;          
-}
-
+} 
 
 .picture {
     width: 125px;
     height: 168px;
     border-radius: 5px;
+    
 }
 
 .card-content {
+    padding-left: 2em;
     display: flex;
+    flex-direction: column;
     
+}
+
+.pin-content {
+    display: flex;
+    column-gap: 1em;
+    padding-top: 1.2em;
+    padding-bottom: .5em;
 }
 
 .location-pin {
     height: 9.55px;
     width: 7px;
+}
+
+.country {
+    font-size: 10.24px;
+    font-weight: 400;
+    line-height: 12px;
+    letter-spacing: .17em;
+    color: #2B283A;
+    
+}
+
+.title {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 30px;
+
+    padding-bottom: .6em;
+}
+
+.start-date {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 10.24px;
+    line-height: 12px;
+
+    padding-bottom: 1em;
+}
+
+.description {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 10.24px;
+    line-height: 150%;
+    color: #2B283A
 }
